--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -34,7 +34,8 @@
   }
   img.active{
     display: inline-block;
-    padding-left: 4%;
+    padding-left:  4%;
+    cursor: pointer;
   }
   @media screen and (max-width: 600px) {
     .topnav a:not(:first-child) {display: none;}
