--- a/CSS/main.css
+++ b/CSS/main.css
@@ -88,7 +88,10 @@ form{
   border-radius: 15px;
 }
 .recaptch{
-  color: aqua;
+    align-self: center;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 8;
 }
 .g-recaptcha div:first-child
   {
