--- a/CSS/main.css
+++ b/CSS/main.css
@@ -87,7 +87,7 @@ form{
   padding: 5%;
   border-radius: 15px;
 }
-.recaptch{
+.recaptcha{
     align-self: center;
     grid-column-start: 1;
     grid-column-end: 3;
